<resources>
    <string name="app_name">Inventory123</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="idItem">Id</string>
    <string name="nameItem">Name</string>
    <string name="priceItem">$</string>
    <string name="stockItem">Stock</string>
    <string name="btnAdd">Add</string>
    <string name="title_add">Add</string>
    <string name="title_Inventory">Stock</string>
    <string name="id">ID</string>
    <string name="cantidadItem">Quantity</string>
    <string name="txt_search">Search  ID</string>
    <string name="txtDelete">DELETE</string>
    <string name="title_delete">Delete</string>
    <string name="title_search">Search</string>
    <string name="title_stock">Stock</string>
</resources>
