<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eId"
        android:inputType="number"
        android:hint="@string/idItem"
        android:textSize="25sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eName"
        android:inputType="textAutoComplete"
        android:hint="@string/nameItem"
        android:textSize="25sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ePrice"
        android:inputType="number"
        android:hint="@string/priceItem"
        android:textSize="25sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eStock"
        android:inputType="number"
        android:hint="@string/stockItem"
        android:textSize="25sp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add"
        android:hint="@string/btnAdd"
        android:textSize="25sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>